# Lamina

./: .RecordInitGridVels.c.swp  .gitignore  AccumProps.c  AccumVacf.c  ApplyDrivingForce.c  ApplyForce.c  ApplyLeesEdwardsBoundaryCond.c  ApplyViscous.c  CMakeLists.txt  Close.c  ComputeBondForce.c  ComputeForcesCells.c  ComputePairForce.c  DisplaceAtoms.c  DumpBonds.c  DumpPairs.c  DumpRestart.c  DumpState.c  EvalCom.c  EvalProps.c  EvalRdf.c  EvalUnwrap.c  EvalVacf.c  EvalVrms.c  Halt.c  Init.c  Integrate.c  LICENSE  LeapfrogStep.c  Makefile  PrintCom.c  PrintMomentum.c  PrintStress.c  PrintSummary.c  PrintVrms.c  Profile-Report.txt  README.md  Trajectory.c  VelocityVerletStep.c  analysis.txt  (+8 more)
.github/workflows/: ci.yml
Misc/: Doxyfile  Doxyfile1  header.tex  preDoxyfile.sh
Misc/doxygen/: Doxyfile  header.tex
docs/: AccumProps_8c.html  AccumProps_8c__incl.map  AccumProps_8c__incl.md5  AccumProps_8c_a4b4560208657b98f0dea0ba6d4413c19_icgraph.map  AccumProps_8c_source.html  AccumVacf_8c.html  AccumVacf_8c__incl.map  AccumVacf_8c_acdda65121bd9cf7a35cb4d2e0fdb7cd9_icgraph.map  AccumVacf_8c_ad6608c7fca41e40ae23fe93c00dc5e2c_icgraph.map  AccumVacf_8c_af60963b0cbbf0bed9d310797a6f9a59d_icgraph.map  AccumVacf_8c_af60963b0cbbf0bed9d310797a6f9a59d_icgraph.md5  AccumVacf_8c_source.html  AllocArrays_8c.html  AllocArrays_8c__incl.map  AllocArrays_8c_a0de7521b891c869e61da0348ea08f8f1_icgraph.map  AllocArrays_8c_source.html  ApplyBoundaryCond_8c.html  ApplyBoundaryCond_8c__incl.map  ApplyBoundaryCond_8c_a5e0b9ccb6d4aee203a4de8438fc9f590_icgraph.map  ApplyBoundaryCond_8c_source.html  ApplyDrivingForce_8c.html  ApplyDrivingForce_8c__incl.map  ApplyDrivingForce_8c_source.html  ApplyForce_8c.html  ApplyForce_8c.js  ApplyForce_8c__incl.md5  ApplyForce_8c_source.html  ApplyLeesEdwardsBoundaryCond_8c.html  ApplyLeesEdwardsBoundaryCond_8c__incl.md5  ApplyLeesEdwardsBoundaryCond_8c_source.html  ApplyShear_8c.html  ApplyShear_8c.js  ApplyShear_8c__incl.map  ApplyShear_8c_source.html  ApplyViscous_8c.html  ApplyViscous_8c.js  ApplyViscous_8c__incl.map  ApplyViscous_8c__incl.md5  ApplyViscous_8c_source.html  BrownianStep_8c.html  (+251 more)
docs/docs/: all_0.js  all_11.js  all_2.js  all_3.js  all_5.js  all_a.js  files_0.js  files_1.js  files_2.js  files_4.js  files_8.js  files_f.js  functions_0.js  functions_2.js  functions_3.js  functions_6.js  functions_b.js  pages_1.js  pages_3.js  typedefs_0.js  variables_6.js  variables_e.js
docs/html/: AccumProps_8c.html  AccumProps_8c.js  AccumVacf_8c.html  AccumVacf_8c.js  AccumVacf_8c__incl.map  AccumVacf_8c__incl.md5  AllocArrays_8c.js  (+268 more)
doxygen/: Doxyfile  header.tex.bak
examples/: README.md  gmon.out  input-data
figures/: my_titlepage.tex  refman-with-title-figure.tex
output/: test.Restart  test.STATE  test.bond  test.com  test.pair  test.result  test.vrms  test.xyz
source/: AccumProps.c  AccumVacf.c  AllocArrays.c  ApplyBoundaryCond.c  ApplyDrivingForce.c  ApplyForce.c  ApplyLeesEdwardsBoundaryCond.c  ApplyShear.c  ApplyViscous.c  BrownianStep.c  Close.c  ComputeBondForce.c  ComputeBondForce.h  ComputeForcesCells.c  ComputePairForce.c  DisplaceAtoms.c  DumpBonds.c  DumpPairs.c  DumpRestart.c  DumpState.c  EvalCom.c  EvalProps.c  EvalRdf.c  EvalSpacetimeCorr.c  EvalUnwrap.c  EvalVacf.c  EvalVrms.c  Halt.c  Init.c  InitVacf.c  Integrate.c  LeapfrogStep.c  Makefile  PrintCom.c  PrintForceSum.c  PrintMomentum.c  PrintStress.c  PrintSummary.c  PrintVacf.c  PrintVrms.c  (+18 more)
unittest/: Close.c  Close.h  Filename.txt  Init.c  Init.h  Makefile  TestComputeBondForce.c  TestComputeBondForce.h  TestComputePairForce.c  TestComputePairForce.h  assert_double_within.c  assert_double_within.h  gmon.out  main.c  test
(+351 files in other folders)
